--- a/client/package.json
+++ b/client/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "katex": "^0.16.11",
+    "markdown-it-katex": "^2.0.3",
     "oidc-client-ts": "^2.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
