Add network timeout to yarn install in client.yml

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          yarn install
+          yarn install --network-timeout 1000000
           yarn playwright install --with-deps
 
       - name: Run the linting checks
