--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -62,11 +62,19 @@ jobs:
         run: |
           yarn test:e2e
 
-      - name: Upload Playwright Report
+      - name: Upload Playwright Report (Linux)
         uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+        if: ${{ !cancelled() && runner.os == 'Linux'}}
         with:
-          name: playwright-report
+          name: playwright-report-linux
+          path: client/playwright-report/**
+          retention-days: 30
+
+      - name: Upload Playwright Report (Windows)
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() && runner.os == 'Windows'}}
+        with:
+          name: playwright-report-windows
           path: client/playwright-report/**
           retention-days: 30
 
