--- a/deploy/docker/compose.local.secure.yml
+++ b/deploy/docker/compose.local.secure.yml
@@ -28,7 +28,7 @@ services:
     image: intocps/dtaas-web:latest
     restart: unless-stopped
     volumes:
-      - "${CLIENT_CONFIG}:/dtaas/client/build/env.js"
+      - "${DTAAS_DIR}/deploy/config/client/env.local.js:/dtaas/client/build/env.js"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.client.rule=PathPrefix(`/`)"
