--- a/deploy/docker/compose.local.yml
+++ b/deploy/docker/compose.local.yml
@@ -20,7 +20,7 @@ services:
     image: intocps/dtaas-web:latest
     restart: unless-stopped
     volumes:
-      - ${CLIENT_CONFIG}:/dtaas/client/build/env.js
+      - ${DTAAS_DIR}/deploy/config/client/env.local.js:/dtaas/client/build/env.js
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.client.entryPoints=web"
