Adds a `LIB_CONFIG` variable for the libms env file

--- a/docker/.env
+++ b/docker/.env
@@ -7,3 +7,4 @@ OAUTH_SECRET='random-secret-string'
 OAUTH_CONF_FILEPATH='/Users/<Username>/DTaaS/docker/conf.dev'
 username1='user1'
 username2='user2'
+LIB_CONFIG='/Users/<Username>/DTaaS/servers/lib/config/.env.default'
