--- a/deploy/docker/compose.local.yml
+++ b/deploy/docker/compose.local.yml
@@ -3,6 +3,7 @@ services:
     image: traefik:v2.10
     restart: unless-stopped
     command: 
+      - "--log.level=DEBUG"
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--entryPoints.web.address=:80"
