--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orbit-ece/libms",
+  "name": "@orbit-ece/libms",
   "version": "0.4.6",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
