--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -114,35 +114,31 @@ jobs:
           flags: lib-microservice-tests
 
 
-  publish-package:
+  publish-package-github:
     if: | 
       (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
 
-    name: Publish to GitHub Packages & NPM
-    runs-on: ubuntu-latest
+    name: Publish to GitHub Packages
     needs: test-lib-ms
-    permissions:
-      packages: write
-      contents: read
+    uses: ./.github/workflows/test-publish-npm.yml
+    with:
+      node-version: ${{ env.NODE_VERSION }}
+      registry-url: 'https://npm.pkg.github.com/'
+      directory: servers/lib
+    secrets: inherit
 
-    steps:
-      - name: Publish npm package to NPM js
-        uses: ./.github/workflows/test-publish-npm.yml
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          registry-url: 'https://registry.npmjs.org'
-          directory: servers/lib
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+  publish-package-npm:
+    if: | 
+      (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
 
-      - name: Publish npm package to github packages
-        uses: ./.github/workflows/test-publish-npm.yml
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          registry-url: 'https://npm.pkg.github.com/'
-          directory: servers/lib
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    name: Publish to GitHub Packages
+    needs: test-lib-ms
+    uses: ./.github/workflows/test-publish-npm.yml
+    with:
+      node-version: ${{ env.NODE_VERSION }}
+      registry-url: 'https://registry.npmjs.org'
+      directory: servers/lib
+    secrets: inherit
 
   get_version:
     name: Get version
