--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -137,7 +137,7 @@ jobs:
 
     name: Publish to GitHub Packages
     needs: [get_version,test-lib-ms]
-    uses: ./.github/workflows/test-publish-npm.yml
+    uses: ./.github/workflows/publish-npm.yml
     with:
       node-version: ${{ needs.get_version.outputs.node-version }}
       registry-url: 'https://npm.pkg.github.com/'
@@ -148,9 +148,9 @@ jobs:
     if: | 
       (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
 
-    name: Publish to GitHub Packages
+    name: Publish to NPM
     needs: [get_version,test-lib-ms]
-    uses: ./.github/workflows/test-publish-npm.yml
+    uses: ./.github/workflows/publish-npm.yml
     with:
       node-version: ${{ needs.get_version.outputs.node-version }}
       registry-url: 'https://registry.npmjs.org'
