--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -155,6 +155,7 @@ jobs:
       node-version: ${{ needs.get_version.outputs.node-version }}
       registry-url: 'https://registry.npmjs.org'
       directory: servers/lib
+      package-name: '@orbit-ece/libms'
     secrets: inherit
 
   publish-docker-image-ghcr:
