--- a/deploy/docker/.env.server
+++ b/deploy/docker/.env.server
@@ -1,9 +1,8 @@
 DTAAS_DIR='/Users/<Username>/DTaaS'
 SERVER_DNS='foo.com'
 OAUTH_URL='https://gitlab.foo.com'
-CLIENT_ID='xx'
-CLIENT_SECRET='xx'
+OAUTH_CLIENT_ID='xx'
+OAUTH_CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
-CLIENT_CONFIG='/Users/<Username>/DTaaS/deploy/config/client/env.js'
 username1='user1'
 username2='user2'
