--- a/docker/.env
+++ b/docker/.env
@@ -1,9 +1,10 @@
 DTAAS_DIR='/Users/<Username>/DTaaS'
 SERVER_DNS='localhost'
 OAUTH_URL='https://gitlab.com'
-CLIENT_ID='xx'
-CLIENT_SECRET='xx'
+OAUTH_CLIENT_ID='xx'
+OAUTH_CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
 OAUTH_CONF_FILEPATH='/Users/<Username>/DTaaS/docker/conf.dev'
 username1='user1'
 username2='user2'
+LIB_CONFIG='/Users/<Username>/DTaaS/servers/lib/config/.env.default'
