--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -143,7 +143,7 @@ jobs:
       registry-url: 'https://npm.pkg.github.com/'
       directory: servers/lib
     secrets:
-      NPM_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
+      NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-package-npm:
     if: | 
