--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -114,7 +114,7 @@ jobs:
           flags: lib-microservice-tests
 
   get_version:
-    name: Get version
+    name: Get version and variables
     runs-on: ubuntu-latest
     steps:
         - name: Checkout Repository
@@ -127,9 +127,11 @@ jobs:
             version=`cat ./servers/lib/package.json | jq -r '.version'`
             echo "version=$version" >> $GITHUB_OUTPUT
             echo "node-version=$NODE_VERSION" >> $GITHUB_OUTPUT
+            echo "package-name=$PACKAGE_NAME" >> $GITHUB_OUTPUT
     outputs:
       version: ${{ steps.get_version.outputs.version }}
       node-version: ${{ steps.get_version.outputs.node-version }}
+      package-name: ${{ steps.get_version.outputs.package-name }}
 
   publish-package-github:
     if: | 
@@ -142,7 +144,7 @@ jobs:
       node-version: ${{ needs.get_version.outputs.node-version }}
       registry-url: 'https://npm.pkg.github.com/'
       directory: servers/lib
-      package-name: ${{ env.PACKAGE_NAME || '' }}
+      package-name: ${{ needs.get_version.outputs.package-name || '' }}
     secrets:
       NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -157,7 +159,7 @@ jobs:
       node-version: ${{ needs.get_version.outputs.node-version }}
       registry-url: 'https://registry.npmjs.org'
       directory: servers/lib
-      package-name: ${{ env.PACKAGE_NAME || '' }}
+      package-name: ${{ needs.get_version.outputs.package-name || '' }}
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN}}
 
