--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -127,11 +127,9 @@ jobs:
             version=`cat ./servers/lib/package.json | jq -r '.version'`
             echo "version=$version" >> $GITHUB_OUTPUT
             echo "node-version=$NODE_VERSION" >> $GITHUB_OUTPUT
-            echo "package-name=$PACKAGE_NAME" >> $GITHUB_OUTPUT
     outputs:
       version: ${{ steps.get_version.outputs.version }}
       node-version: ${{ steps.get_version.outputs.node-version }}
-      package-name: ${{ steps.get_version.outputs.package-name }}
 
   publish-package-github:
     if: | 
@@ -144,7 +142,7 @@ jobs:
       node-version: ${{ needs.get_version.outputs.node-version }}
       registry-url: 'https://npm.pkg.github.com/'
       directory: servers/lib
-      package-name: ${{ needs.get_version.outputs.package-name || '' }}
+      package-name: ${{ vars.PACKAGE_NAME || '' }}
     secrets:
       NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -159,7 +157,7 @@ jobs:
       node-version: ${{ needs.get_version.outputs.node-version }}
       registry-url: 'https://registry.npmjs.org'
       directory: servers/lib
-      package-name: ${{ needs.get_version.outputs.package-name || '' }}
+      package-name: ${{ vars.PACKAGE_NAME || '' }}
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN}}
 
