--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@into-cps-association/libms",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
   "contributors": [
     "Prasad Talasila",
     "Mads Kelberg",
-    "Linda Nguyen"
+    "Linda Nguyen",
+    "Nichlaes H. Sørensen"
   ],
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
