--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@into-cps-association/dtaas-web",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Web client for Digital Twin as a Service (DTaaS)",
   "main": "index.tsx",
   "author": "prasadtalasila <prasad.talasila@gmail.com> (http://prasad.talasila.in/)",
@@ -30,7 +30,7 @@
     "syntax": "npx eslint . --fix",
     "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
     "test:e2e:ext": "cross-env ext=true yarn test:e2e",
-    "test:e2e": "playwright test -c ./playwright.config.ts",
+    "test:e2e": "yarn config:test && playwright test -c ./playwright.config.ts",
     "test:int": "jest -c ./jest.config.json ../test/integration --setupFilesAfterEnv ./test/integration/jest.setup.ts",
     "test:unit": "jest -c ./jest.config.json ../test/unit --setupFilesAfterEnv ./test/unit/jest.setup.ts",
     "test:preview:int": "jest -c ./jest.config.json ../test/preview/integration --setupFilesAfterEnv ./test/preview/integration/jest.setup.ts",
@@ -47,68 +47,76 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@eslint/migrate-config": "^1.3.0",
     "@fontsource/roboto": "^5.0.8",
     "@gitbeaker/rest": "^40.1.2",
     "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^5.14.8",
-    "@mui/material": "^5.14.8",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
     "@mui/x-tree-view": "^7.19.0",
-    "@reduxjs/toolkit": "^1.9.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/remarkable": "^2.0.8",
     "@types/styled-components": "^5.1.32",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
-    "eslint": "8.54.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "katex": "^0.16.11",
     "markdown-it-katex": "^2.0.3",
-    "oidc-client-ts": "^2.2.2",
+    "oidc-client-ts": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-is": "^18.2.0",
-    "react-oidc-context": "^2.2.2",
-    "react-redux": "^8.1.3",
+    "react-oidc-context": "^3.1.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tabs": "^6.0.2",
-    "redux": "^4.2.1",
+    "redux": "^5.0.1",
     "remarkable": "^2.0.1",
     "remarkable-katex": "^1.2.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "styled-components": "^6.1.1",
-    "typescript": "^4.9.5"
+    "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/plugin-syntax-flow": "^7.23.3",
-    "@babel/plugin-transform-react-jsx": "^7.23.4",
-    "@playwright/test": "^1.32.1",
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.2.17",
+    "@babel/core": "7.25.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-flow": "7.25.7",
+    "@babel/plugin-transform-react-jsx": "7.25.7",
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.12.0",
+    "@playwright/test": "1.48.1",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.1",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/jest": "29.5.13",
+    "@types/node": "^22.7.5",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "eslint-config-react-app": "^7.0.1",
+    "globals": "15.11.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "monocart-coverage-reports": "^2.10.2",
-    "playwright": "^1.32.1",
-    "prettier": "^3.2.4",
-    "shx": "^0.3.4",
-    "ts-jest": "^29.1.1"
+    "jest-environment-jsdom": "29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "monocart-coverage-reports": "2.11.1",
+    "playwright": "1.48.1",
+    "prettier": "3.3.3",
+    "shx": "0.3.4",
+    "ts-jest": "29.2.5"
   },
   "browserslist": {
     "production": [
